# 5.4.7-Community-Source

./: CMakeLists.txt  cosmetic_shirt_ids
cmake/compiler/msvc/: settings.cmake
dep/: CMakeLists.txt
dep/acelite/ace/: CMakeLists.txt
dep/g3dlite/source/: System.cpp
dep/mysqllite/include/: mysql.h
dep/recastnavigation/: CMakeLists.txt
dep/recastnavigation/Detour/: CMakeLists.txt  DetourCommon.cpp  DetourNavMesh.cpp  DetourNavMesh.h  DetourNavMeshBuilder.cpp  DetourNavMeshBuilder.h  DetourNavMeshQuery.cpp  DetourNavMeshQuery.h  DetourNode.cpp
dep/recastnavigation/Recast/: CMakeLists.txt  Recast.cpp  Recast.h  RecastArea.cpp  RecastContour.cpp  RecastFilter.cpp  RecastLayers.cpp  RecastMesh.cpp  RecastMeshDetail.cpp  RecastRasterization.cpp  RecastRegion.cpp
depold/: CMakeLists.txt
depold/mysqllite/: CMakeLists.txt
depolderer/: CMakeLists.txt
depolderer/acelite/ace/: CMakeLists.txt
sql/world/: 2017_05_18 Item Spell Fixes.SQL  2017_05_19_Mage Glyph Abuse Fix.sql  2017_05_20_Rogue_Warr_Druid.sql  2017_05_24_DK.sql  2017_06_11 Druid Starsurge proc for instant cast.sql  2017_06_11 [Mage] spellsteal fix.sql  2017_06_20_priest.sql  SkirmNPC.sql  Tabard_NPC.sql  Teleporter.sql  ring_of_frost_Fix.sql  spell_druid_fix.sql  spell_fixes.sql
src/server/collision/: CMakeLists.txt  DynamicTree.cpp
src/server/game/: CMakeLists.txt
src/server/scripts/: CMakeLists.txt
src/server/shared/: CMakeLists.txt  Common.h
src/server/worldserver/: CMakeLists.txt  worldserver.conf.dist
src/tools/map_extractor/: CMakeLists.txt
src/tools/mmaps_generator/: CMakeLists.txt  (+9 more)
(+167 files in other folders)
